BUGfix: Gnome-shell v40+ - misaligned 'Do no disturb' button

--- a/gnome-shell/v40/_common.scss
+++ b/gnome-shell/v40/_common.scss
@@ -21,7 +21,6 @@ stage {
 .button, %button  {
   @include button(normal);
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px;
   &:focus { @include button(focus); }
   &:insensitive { @include button(insensitive); }
@@ -1093,12 +1092,6 @@ StScrollBar {
           color: darken($fg_color, 5%);
         }
       }
-
-        .message-list-clear-button.button {
-          @include button(normal);
-          &:hover,&:focus { @include button(hover); }
-          margin: 1.5em 1.5em 0;
-        }
 
         .message-list-sections {
           spacing: 1em;
