--- a/gnome-shell/v40/gnome-shell.css
+++ b/gnome-shell/v40/gnome-shell.css
@@ -17,7 +17,6 @@ stage {
   icon-shadow: 0 1px black;
   border: 1px solid #0b0d16;
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px; }
   .button:focus {
     color: #ff6a00;
@@ -990,22 +989,6 @@ StScrollBar {
   width: 31.5em; }
   .message-list .message-title, .message-list .message-content, .message-list .message-body {
     color: #b1b6c2; }
-
-.message-list-clear-button.button {
-  color: #bfc3cd;
-  background-color: #06070c;
-  box-shadow: none;
-  border: 1px solid #0b0d16;
-  text-shadow: 0 1px black;
-  icon-shadow: 0 1px black;
-  border: 1px solid #0b0d16;
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    color: #ff6a00;
-    background-color: #090b13;
-    border: 1px solid #0b0d16;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black; }
 
 .message-list-sections {
   spacing: 1em; }
